# testaustime-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  api.md  entrypoint.sh  rustfmt.toml  settings.toml.example
.github/: build.yml
.github/workflows/: build.yml  docker.yml  rust.yml
docs/: APISPEC.md  CONTRIBUTING.md
migrations/2022-01-02-215803_initial_migration/: down.sql  up.sql
migrations/2022-01-09-182446_unsigned_ids/: down.sql  up.sql
migrations/2022-02-03-175924_unique_token/: down.sql  up.sql
migrations/2022-02-03-185714_autoincrement_coding_id/: down.sql  up.sql
migrations/2022-03-10-151853_auth/: down.sql  up.sql
migrations/2022-03-13-150414_remove_discord_id/: down.sql  up.sql
migrations/2022-03-14-080923_friend_relations/: down.sql  up.sql
migrations/2022-03-14-171618_change_friend_system/: down.sql  up.sql
migrations/2022-03-20-182506_varchar_go_brr/: down.sql  up.sql
migrations/2022-03-23-200103_init/: down.sql  up.sql
migrations/2022-04-16-172235_leaderboards/: down.sql  up.sql
migrations/2022-04-24-235236_varchars_to_chars/: down.sql  up.sql
migrations/2022-04-25-000010_testausid/: down.sql  up.sql
migrations/2022-06-22-203141_testausid_types/: down.sql  up.sql
migrations/2022-07-29-040044_public_profile/: down.sql  up.sql
migrations/2022-09-06-091243_increase_project_name_length/: down.sql
migrations/2024-03-12-174132_serverside_hidden/: down.sql  up.sql
src/: api.rs  auth.rs  database.rs  error.rs  main.rs  models.rs  oauth.rs  ratelimiter.rs  requests.rs  schema.rs  user.rs  utils.rs
src/api/: account.rs  activity.rs  auth.rs  friends.rs  leaderboards.rs  mod.rs  oauth.rs  search.rs  stats.rs  users.rs
src/auth/: mod.rs  secured_access.rs
src/database/: activity.rs  auth.rs  friends.rs  leaderboards.rs  misc.rs  mod.rs
src/tests/: account.rs  activity.rs  auth.rs  friends.rs  leaderboards.rs  macros.rs  mod.rs
testausratelimiter/: Cargo.toml
testausratelimiter/src/: lib.rs
