[package]
name = "testausratelimiter"
version = "0.1.0"
edition = "2021"
authors = ["Ville Järvinen <jarvinenville606@gmail.com>", "Luukas Pörtfors <lajp@iki.fi>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "^4.0.1", features = ["macros", "rustls"] }
actix = "~0.13"
log = "~0.4"
futures-util = "~0.3"
